<resources>
    <string name="app_name">MusicOn</string>

    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset password</string>
    <string name="username_or_password_invalid">Username or password invalid!</string>
    <string name="username_and_password_field_are_empty">Username or password field are empty!</string>
    <string name="user_field_empty">User field empty!</string>
    <string name="password_field_empty">Password field empty!</string>
    <string name="home">Home</string>
    <string name="artist">Artist</string>
    <string name="song">Song</string>
    <string name="username_or_email_already_exist_please_try_again">Username or Email already exist. Please try again</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="upload">Upload</string>
    <string name="start_upload_process">Start upload process</string>
    <string name="file_chosen_to_upload">File chosen to upload</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="genre">genre</string>
    <string name="song_name">Song Name</string>
    <string name="_0_00">0:00</string>
    <string name="_8_59">8:59</string>
    <string name="imageviewcoverurl">imageViewCoverUrl</string>

    <string-array name="genres">
        <item>Alternative</item>
        <item>Blues</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Dance</item>
        <item>Electronic</item>
        <item>Hip Hop/Rap</item>
        <item>Experimental</item>
        <item>Jazz</item>
        <item>Indie</item>
        <item>Soul</item>
        <item>Rock</item>
        <item>Metal</item>
        <item>Reggae</item>
    </string-array>
</resources>
