<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/chooseFileBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:text="@string/choose_a_file"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:theme="@style/MyButton" />

        <TextView
            android:id="@+id/fileChosenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/file_chosen_to_upload"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/filePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/no_file_chosen"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/start_upload_process"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:theme="@style/MyButton"
            android:background="@color/indigo"
            android:visibility="gone" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:cpb_background_progressbar_color="#eeaeff"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress="0"
            app:cpb_progressbar_color="#c801ff"
            app:cpb_progressbar_width="5dp" />

        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-75dp"
            android:text="0%"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>